bin/tests/errors_lexer/lexer/lex_err_empty_hex_escape.swg
#global fileprivate

'\x' // swc-expected-error {{lex_err_empty_hex_escape}}
